// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneHierarchyTreeItem should bubble up when expanded 1`] = `
<div>
  <enhancedtreeitem
    acceptdrop="AcceptableDropTypes"
    data="[object Object]"
    datatype="modelRef"
    labeltext="[object Object]"
    selectionmode="single"
  >
    <enhancedtree
      acceptdrop="AcceptableDropTypes"
    />
  </enhancedtreeitem>
</div>
`;

exports[`SceneHierarchyTreeItem should render SubModelTree when item has a model, and not in view mode 1`] = `
<div>
  <enhancedtreeitem
    acceptdrop="AcceptableDropTypes"
    data="[object Object]"
    datatype="ModelRef"
    labeltext="[object Object]"
    selectionmode="single"
  />
</div>
`;
